[gd_scene load_steps=9 format=3 uid="uid://cmoycaoidmwfr"]

[ext_resource type="PackedScene" uid="uid://dpgao5ebcjpab" path="res://Cenas/player.tscn" id="1_74bqr"]
[ext_resource type="Script" uid="uid://bkxk87m1sronk" path="res://Cenas/main.gd" id="1_x6di6"]
[ext_resource type="PackedScene" uid="uid://wuwu6bkibi8j" path="res://Cenas/linha_chegada.tscn" id="2_ruij7"]
[ext_resource type="Texture2D" uid="uid://ns5t32os6kx7" path="res://Aseprite/Aseprite/Wallpaper.png" id="2_x6di6"]
[ext_resource type="PackedScene" uid="uid://cl30r5ybkv1jh" path="res://Cenas/hud.tscn" id="4_lb8y5"]
[ext_resource type="AudioStream" uid="uid://dqrf0b3qsqerm" path="res://Material Freeway/Material Freeway/sons/tema.wav" id="4_n00j1"]
[ext_resource type="AudioStream" uid="uid://4xlnpc5s64x8" path="res://Material Freeway/Material Freeway/sons/ponto.wav" id="5_x6di6"]
[ext_resource type="AudioStream" uid="uid://w170jc0o0ho8" path="res://Material Freeway/Material Freeway/sons/ganhou.wav" id="6_btbr3"]

[node name="Main" type="Node"]
script = ExtResource("1_x6di6")

[node name="Pista" type="Sprite2D" parent="."]
position = Vector2(2, 2)
texture = ExtResource("2_x6di6")
centered = false

[node name="LinhaChegada" parent="." instance=ExtResource("2_ruij7")]
modulate = Color(0.243137, 0.486275, 0.866667, 0.403922)
position = Vector2(0, 61)

[node name="Player" parent="." instance=ExtResource("1_74bqr")]
position = Vector2(625, 685)

[node name="TimerCarrosRapidos" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="TimerCarrosLentos" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioTema" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_n00j1")
area_mask = 5

[node name="AudioPonto" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_x6di6")

[node name="AudioVitoria" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_btbr3")

[node name="HUD" parent="." instance=ExtResource("4_lb8y5")]

[connection signal="pontua" from="Player" to="." method="_on_player_pontua"]
[connection signal="timeout" from="TimerCarrosRapidos" to="." method="_on_timer_carros_r√°pidos_timeout"]
[connection signal="timeout" from="TimerCarrosLentos" to="." method="_on_timer_carros_lentos_timeout"]
[connection signal="reinicia" from="HUD" to="." method="_on_hud_reinicia"]
